Fixed it I hope it works in production in the future

--- a/news.ipynb
+++ b/news.ipynb
@@ -12,6 +12,127 @@
     "\n",
     "*CSS:* Basic styling with a clean, readable layout."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI News App\n",
+    "\n",
+    "## Description\n",
+    "\n",
+    "This application automatically crawls news articles from various sources via RSS feeds, analyzes the sentiment (tonality) of each article using Hugging Face Transformers models, generates summaries, and displays the news categorized as Positive, Neutral, or Negative in a web interface built with React.\n",
+    "\n",
+    "## Features\n",
+    "\n",
+    "- **Automated News Crawling:** Fetches articles from configured RSS feeds.\n",
+    "- **Content Extraction:** Uses Puppeteer to extract the main content from article web pages.\n",
+    "- **Sentiment Analysis:** Classifies article content into Positive, Neutral, or Negative using a pre-trained Hugging Face model (`distilbert-base-uncased-finetuned-sst-2-english`).\n",
+    "- **Summarization:** Includes capabilities for summarizing article content (implementation details may vary).\n",
+    "- **Database Storage:** Stores processed articles (title, content, summary, tonality, source, etc.) in MongoDB.\n",
+    "- **Categorized Display:** Presents news articles grouped by their sentiment in a React-based frontend.\n",
+    "- **API Backend:** Node.js/Express backend serves the processed news data and the frontend application.\n",
+    "\n",
+    "## Tech Stack\n",
+    "\n",
+    "- **Backend:** Node.js, Express, Mongoose, Puppeteer, `@huggingface/transformers`, `rss-parser`, `dotenv`\n",
+    "- **Frontend:** React, Axios\n",
+    "- **Database:** MongoDB\n",
+    "- **Development:** JavaScript\n",
+    "\n",
+    "## Setup & Installation\n",
+    "\n",
+    "**Prerequisites:**\n",
+    "\n",
+    "- [Node.js](https://nodejs.org/) (LTS version recommended)\n",
+    "- [npm](https://www.npmjs.com/) (usually comes with Node.js)\n",
+    "- [MongoDB](https://www.mongodb.com/try/download/community) installed and running locally, or a MongoDB Atlas connection string.\n",
+    "\n",
+    "**Steps:**\n",
+    "\n",
+    "1.  **Clone the repository:**\n",
+    "\n",
+    "    ```bash\n",
+    "    git clone <your-repository-url>\n",
+    "    cd <repository-folder>\n",
+    "    ```\n",
+    "\n",
+    "2.  **Set up Backend:**\n",
+    "\n",
+    "    ```bash\n",
+    "    cd backend\n",
+    "    npm install\n",
+    "    ```\n",
+    "\n",
+    "    - Create a `.env` file in the `backend` directory.\n",
+    "    - Add your MongoDB connection string to the `.env` file:\n",
+    "      ```env\n",
+    "      MONGO_URI=your_mongodb_connection_string_here\n",
+    "      ```\n",
+    "      (e.g., `MONGO_URI=mongodb://localhost:27017/ainewsapp`)\n",
+    "\n",
+    "3.  **Set up Frontend:**\n",
+    "    ```bash\n",
+    "    cd ../frontend\n",
+    "    npm install\n",
+    "    ```\n",
+    "\n",
+    "## Running the Application\n",
+    "\n",
+    "**1. Populate the Database (Run the Crawler):**\n",
+    "\n",
+    "The backend needs articles in the database to display. The crawler fetches, processes, and saves these articles. You need to run it at least once, and potentially periodically to get new news.\n",
+    "\n",
+    "- Navigate to the backend directory:\n",
+    "  ```bash\n",
+    "  cd backend\n",
+    "  ```\n",
+    "- Run the crawler script (this might take some time depending on the number of sources and articles):\n",
+    "  ```bash\n",
+    "  node -e 'require(\"./services/crawler\").crawlNews()'\n",
+    "  ```\n",
+    "  _(Note: Monitor the console output for progress and potential errors during crawling.)_\n",
+    "\n",
+    "**2. Build the Frontend:**\n",
+    "\n",
+    "The backend is configured to serve the optimized production build of the frontend.\n",
+    "\n",
+    "- Navigate to the frontend directory:\n",
+    "  ```bash\n",
+    "  cd ../frontend\n",
+    "  ```\n",
+    "- Build the React app:\n",
+    "  ```bash\n",
+    "  npm run build\n",
+    "  ```\n",
+    "\n",
+    "**3. Start the Backend Server:**\n",
+    "\n",
+    "The backend server provides the API for the articles and serves the built frontend.\n",
+    "\n",
+    "- Navigate back to the backend directory:\n",
+    "  ```bash\n",
+    "  cd ../backend\n",
+    "  ```\n",
+    "- Start the server:\n",
+    "  ```bash\n",
+    "  node server.js\n",
+    "  ```\n",
+    "  You should see logs indicating the server is running and connected to MongoDB.\n",
+    "\n",
+    "**4. Access the Application:**\n",
+    "\n",
+    "Open your web browser and navigate to:\n",
+    "[http://localhost:5000](http://localhost:5000)\n",
+    "\n",
+    "You should see the AI News App interface displaying articles fetched from your database.\n",
+    "\n",
+    "## Environment Variables\n",
+    "\n",
+    "The backend uses the following environment variable configured in `backend/.env`:\n",
+    "\n",
+    "- `MONGO_URI`: The connection string for your MongoDB database.\n"
+   ]
   }
  ],
  "metadata": {
